# optcg

./: .gitignore  Cargo.toml  main.rs.bak  sample_deck.txt
assets/card_data/: DON-don.json  OP09-072-P0.json  OP09-072-P1.json  ST01-001-P0.json  ST01-002-P0.json  ST01-003-P0.json  ST01-004-P0.json  ST01-005-P0.json  ST01-006-P0.json  ST01-007-P0.json  ST01-008-P0.json  ST01-009-P0.json  ST01-010-P0.json  ST01-011-P0.json  ST01-012-P0.json  ST01-013-P0.json  ST01-014-P0.json  ST01-015-P0.json
src/: card.rs  game.rs  lib.rs  main.rs  mockclient.rs  player.rs  player_area.rs  utils.rs
