[package]
name = "optcg"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
log = "0.4.25"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
simplelog = "0.12.2"
tokio = { version = "1.43.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
